--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "electron": "~1.6.2"
   },
   "dependencies": {
+    "attr-accept": "^1.1.3",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
