--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "timer",
   "version": "1.0.0",
-  "description": "Electron timer app",
+  "description": "Electron Video Converter App",
   "main": "main.js",
   "scripts": {
     "start": "webpack-dev-server",
